--- a/index.html
+++ b/index.html
@@ -4,13 +4,34 @@
     <title>Home</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
     <script>
+      var players = [];
+
       function print() {
         alert('hello world');
+      }
+
+      function addPlayer() {
+        alert('clicked');
       }
     </script>
   </head>
   <body>
-    <input type="text" />
+    <div class="mt-2">
+      <div class="row">
+        <div class="col-6">
+          <input type="text" />
+        </div>
+        <div class="col-4">
+          <button type="button" onclick="addPlayer()">Add Member</button>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
